clusters/common/apps/monitoring/kube-prometheus-stack/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    item.homer.rajsingh.info/name: "Alertmanager"
    item.homer.rajsingh.info/subtitle: "Alert Management"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/alertmanager.png"
    item.homer.rajsingh.info/tag: "infrastructure"
    item.homer.rajsingh.info/keywords: "alerts, notifications, monitoring, prometheus"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts # Assuming internal access only for now
      namespace: envoy-gateway-system
  hostnames:
    - "alertmanager.rajsingh.info"
    - "alertmanager.lukehouge.com"
    # Add other hostnames if needed, e.g., alertmanager.lukehouge.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093 # The http-web port from the service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
