clusters/common/apps/monitoring/kube-prometheus-stack/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    item.homer.rajsingh.info/name: "Prometheus"
    item.homer.rajsingh.info/subtitle: "Metrics Collection"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/prometheus.svg"
    item.homer.rajsingh.info/tag: "monitoring"
    item.homer.rajsingh.info/keywords: "metrics, monitoring, timeseries"

    service.homer.rajsingh.info/name: "Monitoring"
    service.homer.rajsingh.info/icon: "fas fa-chart-line"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts # Assuming internal access only
      namespace: envoy-gateway-system
  hostnames:
    - "prometheus.rajsingh.info"
    - "prometheus.lukehouge.com"
    # Add other hostnames if needed, e.g., prometheus.lukehouge.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090 # The http-web port from the service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
